--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@
 hs_err_pid*
 
 !gradle-wrapper.jar
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+.idea
